tests/__fixtures__/success/en/nested.php
<?php declare(strict_types=1);

return [
    "foo" => array(
        "bar" => "bar"
    ),
];
