tests/__fixtures__/fail/en/nested.php
<?php declare(strict_types=1);

return [
    "foo" => array(
        "foo_bar" => "bar foo"
    ),
];
